# LoggingSystem

./: .clangd  .gitignore  CMakeLists.txt  CONTEXT-logging-system-dev.md  Project_Initial_Tree.md  compile_commands.json  gitignore_directories.md  kilo.json  repo-index.json
.github/scripts/: generate_repo_index.py
ProjectManagement/Architectural_Analysis/: CodebaseFile_DocumentationPattern.md
ProjectManagement/Architectural_Analysis/logging_system/: batch_3_summary.md  batch_4_summary.md  batch_5_summary.md  batch_injector_assembler_summary.md  batch_summary.md  debug_slice_summary.md  error_slice_summary.md  fatal_slice_summary.md  trace_slice_summary.md  warn_slice_summary.md
ProjectManagement/Docs/: A_Cpp_Architectural_Skelton.md  B_Python_To_Cpp.md
apps/: placeholder.txt
docs/checkpoints/: DEBUG_SLICE_BASELINE_V1.md  ERROR_SLICE_BASELINE_V1.md  FATAL_SLICE_BASELINE_V1.md  INFO_SLICE_SYNC_BASELINE_V1.md  TRACE_SLICE_BASELINE_V1.md  WARN_SLICE_BASELINE_V1.md
include/logging_system/A_Core/: binding_concepts.hpp  binding_tags.hpp  binding_traits.hpp  dispatch_binding.hpp  pipeline_binding.hpp  preparation_binding.hpp  resolver_binding.hpp
include/logging_system/B_Models/: content_contracts.hpp  log_envelope.hpp  log_metadata.hpp  log_record.hpp  utc_now_iso.hpp
include/logging_system/C_Contracts/: adapter_emission_concept.hpp  dispatch_executor_concept.hpp  dispatcher_resolver_concept.hpp  metadata_injector_concept.hpp  readonly_resolver_concept.hpp  repository_route_concept.hpp  writer_resolver_concept.hpp
(+223 files in other folders)
